rustbook-ru/listings/ch21-web-server/no-listing-01-define-threadpool-struct/output.txt
$ cargo check
    Checking hello v0.1.0 (file:///projects/hello)
error[E0599]: no function or associated предмет named `new` found for struct `ThreadPool` in the current scope
  --> src/main.rs:12:28
   |
12 |     let pool = ThreadPool::new(4);
   |                            ^^^ function or associated предмет not found in `ThreadPool`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `здравствуй` (bin "здравствуй") due to 1 previous error
